[tool.poetry]
name = "audiobatchdownloader"
version = "0.1.0"
description = "Helps with ease domnload many files from any url resourse"
authors = ["Active Profi <atosdo@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
types-beautifulsoup4 = "^4.12.0.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
