[tool.poetry]
name = "audiobatchdownloader"
version = "0.1.0"
description = "Helps with ease domnload many files from any url resourse"
authors = ["Active Profi <atosdo@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
requests = "^2.32.0"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.7"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120