[project]
name = "audiobatchdownloader"
version = "0.1.0"
description = "Helps with ease domnload many files from any url resourse"
authors = [{ name = "Common Lisper", email = "atosdo@live.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "requests>=2.32.4",
    "validators>=0.35.0",
]


[dependency-groups]
dev = ["ruff>=0.12.9"]


[tool.ruff]
line-length = 120
